--- a/backend/package.json
+++ b/backend/package.json
@@ -20,7 +20,6 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
-    "coolsms-node-sdk": "^2.1.0",
     "@apollo/server": "^4.10.4",
     "@nestjs/apollo": "^12.2.0",
     "@nestjs/common": "^10.0.0",
@@ -30,9 +29,12 @@
     "@nestjs/passport": "^10.0.3",
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/typeorm": "^10.0.2",
+    "@types/cookie-parser": "^1.4.7",
     "bcrypt": "^5.1.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
+    "cookie-parser": "^1.4.6",
+    "coolsms-node-sdk": "^2.1.0",
     "mysql2": "^3.10.3",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
